关于无法显示标签的bug 修复完成
是由于对于featured-condition-size变量理解不清，造成了无法在标签栏显示标签的后果。

--- a/_posts/2015-12-16-welcome.markdown
+++ b/_posts/2015-12-16-welcome.markdown
@@ -61,6 +61,7 @@ tags:
 
 * 文件编码问题。貌似因为Jekyll的编码问题，所以博文的标题是不能用中文的，而且整个博文的编码也必须是UTF-8，windows平台记得不能带BOM字符。我就因为不小心用sublime打开了博文，改变了编码导致全部乱码，而且Github Pages也是无法识别非UTF-8编码的文章，因为这个又收到亲爱的Github的邮。（它一定是爱上我了，嗯，准是这样）
 
+* 配置文件问题。要搞懂_config.yml里面各个变量的**实际意义**。eg.featured-condition-size这个变量默认配置为1，也就是说起码要有两篇文章是某一个标签，这个标签才会显示在FEATURED TAGS处，我自己就因为这个原因浪费了好多时间。
 
 
 
