--- a/_posts/2015-12-16-welcome.markdown
+++ b/_posts/2015-12-16-welcome.markdown
@@ -1,13 +1,13 @@
 ---
 layout:     post
 title:      "Glad to see you here"
-subtitle:   " \"I have been waiting for you here for a long time\""
+subtitle:   "\"I have been waiting for you here for a long time\""
 date:       2015-12-16 15:00:00
 author:     "Bern3rsH"
 header-img: "img/welcome-bg.jpeg"
 tags:
-    - Life 
-    - FE2
+      - Life
+      - FE2
 ---
 
 
@@ -15,10 +15,9 @@ tags:
 > "前进！不择手段地前进！！"
 
 ## 前言
+\* 终于有个自己的地方，网上的家？
 
-终于有个自己的地方，网上的家？
-
-[直接看实现，gogogo](#build)
+[直接看博客技术的实现，gogogo][1]
 
 一直憧憬着，能够有这么个地方，能够记录有时脑子坏了的自己那些云波诡谲的想法，还有作为一个把全栈工程师当作未来目标的自己对于技术的一点看法和感悟，听和看无数的大牛说过要搞自己的技术博客。而临到想写时，那些CSDN，博客园之类的，可能时和设计师交朋友交得多了，审美也挑剔了起来，觉得那些博客网站太丑了。恰好做的前端，于是一直想自己折腾一个“部落格”，但是一直都太懒了，还有觉得自己水平并不能做出自己满意的作品。
 
@@ -30,11 +29,11 @@ tags:
 
 ## 技术实现
 
-暑假的时候也动过写博客的念头，因后来忙于外包，也就没时间做，放弃了。不过也google了许多相关的资料，以前就很喜欢看阮老师的博客，恰巧里面有一篇[《搭建一个免费的，无限流量的Blog----github Pages和Jekyll入门》](http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html)觉得很对胃口，于是就决定使用[Jekyll](http://jekyllrb.com/)+[Github Pages](https://pages.github.com/)来搭建我的“小窝”。这是Jekyll的[中文文档网站](http://jekyllcn.com/),里面详细介绍了关于jekyll的一些指令和配置。
+暑假的时候也动过写博客的念头，因后来忙于外包，也就没时间做，放弃了。不过也google了许多相关的资料，以前就很喜欢看阮老师的博客，恰巧里面有一篇[《搭建一个免费的，无限流量的Blog----github Pages和Jekyll入门》][2]觉得很对胃口，于是就决定使用[Jekyll][3]+[Github Pages][4]来搭建我的“小窝”。这是Jekyll的[中文文档网站][5],里面详细介绍了关于jekyll的一些指令和配置。
 
 这样做的好处，显而易见：
 
-* **Markdown** 对于我来说，这是一个很好的契机去学习这门让我的写作变得优雅起来的语言，名号早已如雷贯耳，却一直没用过。[Markdown语法说明](http://wowubuntu.com/markdown/)而Github Pages推荐使用的Markdown解释器是kramdown，与一般的Markdown语法又有所不同，但也不需要过分纠结。这是[kramdown的中文文档](https://github.com/flyaway1217/flyaway1217.github.com/blob/master/_drafts/Kramdown-Syntax.md)(这是我从别人Github Pages博客的draft(草稿)里找到的，我也是蛮拼的)。
+* **Markdown** 对于我来说，这是一个很好的契机去学习这门让我的写作变得优雅起来的语言，名号早已如雷贯耳，却一直没用过。[Markdown语法说明][6]而Github Pages推荐使用的Markdown解释器是kramdown，与一般的Markdown语法又有所不同，但也不需要过分纠结。这是[kramdown的中文文档][7](这是我从别人Github Pages博客的draft(草稿)里找到的，我也是蛮拼的)。
 
 * 无需**数据库**、**评论功能**，不需要不断的更新版本——只用关心你的博客内容。
 
@@ -43,25 +42,25 @@ tags:
 * 有很多很多的模版供你选择，还可以自己随意更改
 
 
-额，Jekyll＋Github Pages最大的问题。还是**GFW**(俗称的墙）的问题（手动再见）
+	额，Jekyll＋Github Pages最大的问题。还是**GFW**(俗称的墙）的问题（手动再见）\`
 
 * github服务器访问过慢,不过还好可以忍受
 
-* Jekyll的默认插件Disqus使用的都是国内无法使用的Facebook,Twitter等的帐号，而国内的评论插件多说，有言等的评论框真的太丑了。。。稍微逼格高点的模版就会有深深的违和感，所以暂时还没有做评论，以后考虑考虑再说,我试用了[百度分享](http://share.baidu.com/)来做分享功能，十分方便，只要在post布局页面插入HTML和JS语句即可，会自动变成图标进行分享，唯一的不足可能是灰色主题的微信图标有bug（见[文底](#bug))和印象笔记图标不显示（手动再见）
+* Jekyll的默认插件Disqus使用的都是国内无法使用的Facebook,Twitter等的帐号，而国内的评论插件多说，有言等的评论框真的太丑了。。。稍微逼格高点的模版就会有深深的违和感，所以暂时还没有做评论，以后考虑考虑再说,我试用了[百度分享][8]来做分享功能，十分方便，只要在post布局页面插入HTML和JS语句即可，会自动变成图标进行分享，唯一的不足可能是灰色主题的微信图标有bug（见[文底][9])和印象笔记图标不显示（手动再见）
 
-* Jekyll的安装在国内真心太慢了，我目前翻墙只是用[XX-Net](https://github.com/XX-net/XX-Net)配合Chrome里的[Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif?utm_source=chrome-ntp-icon)插件，没有全局的VPN，所以按照Jekyll文档安装的时候速度奇慢，貌似是被墙了
+* Jekyll的安装在国内真心太慢了，我目前翻墙只是用[XX-Net][10]配合Chrome里的[Proxy SwitchyOmega][11]插件，没有全局的VPN，所以按照Jekyll文档安装的时候速度奇慢，貌似是被墙了
 
 
 
 下面就是我遇到几个**问题**:
 
-* 安装Jekyll。[Jekyll的安装文档](http://jekyll.bootcss.com/docs/installation/)里面说的是用`gem install jekyll`来安装，然后Mac自带了Ruby和gem。但是，现实是残酷的，怎么也不成功。后来在[Mac下搭建jekyll环境](http://www.cnblogs.com/kaiye/archive/2013/04/24/3039345.html)里才发现自带的版本是过低的，无法安装Jekyll，而且后来需要替换成淘宝的镜像才能正常速度安装Jekyll。具体操作他的博文里都有
+* 安装Jekyll。[Jekyll的安装文档][12]里面说的是用`gem install jekyll`来安装，然后Mac自带了Ruby和gem。但是，现实是残酷的，怎么也不成功。后来在[Mac下搭建jekyll环境][13]里才发现自带的版本是过低的，无法安装Jekyll，而且后来需要替换成淘宝的镜像才能正常速度安装Jekyll。具体操作他的博文里都有
 
-* 用的别人的模版配置问题。我的博客大的主题是fork的[Hux同学（学习的榜样）Blog的Boilerplate](https://github.com/Huxpro/huxblog-boilerplate)，但是在配置的时候要注意\_config.yml里的url和baseurl。**你是用户和组织的站点（username.github.io)下master的分支还是username.github.io下的新建项目的分支**。 如果是前者，那么直接将Jekyll的文件夹commit到master分支上;如果是后者，先在username.github.io下添加gh-pages分支，然后在\_config.yml里在baseurl添加/project-name（注意必须存在头部的斜杠以及不能有尾部的斜杠。）还有就是Jekyll的本地文件夹里的CNAME记得修改为自己博客的网址，不然Github在build你的页面的时候会失败，发邮件给你（亲测，哈哈)。
+* 用的别人的模版配置问题。我的博客大的主题是fork的[Hux同学（学习的榜样）Blog的Boilerplate][14]，但是在配置的时候要注意\_config.yml里的url和baseurl。**你是用户和组织的站点（username.github.io)下master的分支还是username.github.io下的新建项目的分支**。 如果是前者，那么直接将Jekyll的文件夹commit到master分支上;如果是后者，先在username.github.io下添加gh-pages分支，然后在\_config.yml里在baseurl添加/project-name（注意必须存在头部的斜杠以及不能有尾部的斜杠。）还有就是Jekyll的本地文件夹里的CNAME记得修改为自己博客的网址，不然Github在build你的页面的时候会失败，发邮件给你（亲测，哈哈)。
 
 * 文件编码问题。貌似因为Jekyll的编码问题，所以博文的标题是不能用中文的，而且整个博文的编码也必须是UTF-8，windows平台记得不能带BOM字符。我就因为不小心用sublime打开了博文，改变了编码导致全部乱码，而且Github Pages也是无法识别非UTF-8编码的文章，因为这个又收到亲爱的Github的邮。（它一定是爱上我了，嗯，准是这样）
 
-* 配置文件问题。要搞懂_config.yml里面各个变量的**实际意义**。eg.featured-condition-size这个变量默认配置为1，也就是说起码要有两篇文章是某一个标签，这个标签才会显示在FEATURED TAGS处，我自己就因为这个原因浪费了好多时间。
+* 配置文件问题。要搞懂\_config.yml里面各个变量的**实际意义**。eg.featured-condition-size这个变量默认配置为1，也就是说起码要有两篇文章是某一个标签，这个标签才会显示在FEATURED TAGS处，我自己就因为这个原因浪费了好多时间。
 
 
 
@@ -75,14 +74,13 @@ Good luck!
 
 这是我第一次写markdown的文档（囧），一边看一边要查询语法，也是第一次写这种教授类的文章，觉得更加佩服那些写了很多博文的技术大牛。写的时候你需要不断回忆当时所遇到的问题，还要去找一下当时解决所用的网址和方法。但是在搭建这个博客的过程中，也学习了很多，更熟练的用Boostrap，用Jekyll的layout可以快速定制每个页面的排版等。
 
-正是这样，一篇小小的开博文，几乎耗去了我一个下午的时间。。。于是以后一定要养成遇到问题随手把问题和解决方法记录在Evernote上，然后觉得有价值的来这里与大家分享。希望自己能够坚持把，虽然现在关于前端的博客一大把。。。但是，我会竭尽我自己一点小小的能力写出一点东西(比如这个博客本身的代码实现我有些地方还不太明白，研究之后再写一点东西）。这如最前面所说的[《三体》](http://book.douban.com/subject/2567698/)里的名言"前进!不择手段的前进!!"，也不枉现在度过的这些美好的青春时光。
+正是这样，一篇小小的开博文，几乎耗去了我一个下午的时间。。。于是以后一定要养成遇到问题随手把问题和解决方法记录在Evernote上，然后觉得有价值的来这里与大家分享。希望自己能够坚持把，虽然现在关于前端的博客一大把。。。但是，我会竭尽我自己一点小小的能力写出一点东西(比如这个博客本身的代码实现我有些地方还不太明白，研究之后再写一点东西）。这如最前面所说的[《三体》][15]里的名言"前进!不择手段的前进!!"，也不枉现在度过的这些美好的青春时光。
 
 
 以上。
 
-<p id = "bug"></p>                                             
+<p id = "bug"></p>
   －－Bern3rsH写于2015.12.16
-   
 
 
 
@@ -94,3 +92,19 @@ Good luck!
 
 
  
+
+[1]:	#build
+[2]:	http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
+[3]:	http://jekyllrb.com/
+[4]:	https://pages.github.com/
+[5]:	http://jekyllcn.com/
+[6]:	http://wowubuntu.com/markdown/
+[7]:	https://github.com/flyaway1217/flyaway1217.github.com/blob/master/_drafts/Kramdown-Syntax.md
+[8]:	http://share.baidu.com/
+[9]:	#bug
+[10]:	https://github.com/XX-net/XX-Net
+[11]:	https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif?utm_source=chrome-ntp-icon
+[12]:	http://jekyll.bootcss.com/docs/installation/
+[13]:	http://www.cnblogs.com/kaiye/archive/2013/04/24/3039345.html
+[14]:	https://github.com/Huxpro/huxblog-boilerplate
+[15]:	http://book.douban.com/subject/2567698/
