--- a/_posts/2015-12-22-photo.markdown
+++ b/_posts/2015-12-22-photo.markdown
@@ -202,19 +202,24 @@ JS
 
 ## 解决
 
-### 一筹莫展
+#### 一筹莫展
 
 后来，二话不说，毕竟咱在网上最熟练的事儿就是：搜索。我想，今年web app这么火，应该有很多人遇到过这个问题，会有人解答的。但是，真的找不到，当时也不认识大神，也不混社区（现在也没怎么混。。。）所以原来还想搞清原理，但是实在没办法了，之后想了想直接找解决方法。于是想通过判定长与宽的大小来判断照片是竖着拍还是横着拍，然后[通过canvas来实施旋转][4]，但是我也不知道是为什么。后来恰好设计师改了设计稿，上传图片不需要预览了，于是就直接让图片在后端旋转了。于是这个问题一直没解决。。。一晃3，4个月过去了，回忆那时候的岁月，也想到了这个问题。不甘心的滋味涌上心头，于是我又把当时的代码拿出来，测试一下，果然在最新的iOS9上还是这样的。
 
-### 初见曙光
-又开始了疯狂查找解决资料的过程，后来忙活了一天（虽然有时候有点懒，但是对于有 bug的情况我还是很上心的，记得有次一个bug卡了5天，饭也没怎么吃，觉也没咋睡，天天熬夜，仿佛执念），终于找到了腾讯TGideas的这篇文章：[《H5拍照应用开发经历的那些坑儿》][5]。里面第一个坑就是照片翻转问题
+#### 初见曙光
+又开始了疯狂查找解决资料的过程，后来忙活了一天（虽然有时候有点懒，但是对于有 bug的情况我还是很上心的，记得有次一个bug卡了5天，饭也没怎么吃，觉也没咋睡，天天熬夜，仿佛执念），终于找到了腾讯TGideas的这篇文章：[《H5拍照应用开发经历的那些坑儿》][5]。里面第一个坑就是照片翻转问题:
+>  问题描述：
 
-> 问题描述：
-> 手持设备不同方向所拍摄的照片方向不同，照片的方向都会不同，但相册中会自动纠正，这一问题在ios和android中都存在。 
-> 问题解决：
-> 3.1.1、将图片数据转换成二进制数据，方便获取图片的exif信息；（这里我引入了 [Binary Ajax][6]）
-> 3.1.2、获取图片的exif信息；（这里我使用了 [Javascript EXIF Reader][7]）
-> 3.1.3、通过图片exif信息，获取图片拍摄时所持设备方向orientation。 
+>  手持设备不同方向所拍摄的照片方向不同，照片的方向都会不同，但相册中会自动纠正，这一问题在ios和android中都存在。 
+
+>  问题解决：
+
+>1、将图片数据转换成二进制数据，方便获取图片的exif信息；（这里我引入了 [Binary Ajax][6]）
+
+>2、获取图片的exif信息；（这里我使用了 [Javascript EXIF Reader][7]）
+
+>3、通过图片exif信息，获取图片拍摄时所持设备方向orientation。 
+
 他的代码
 
 ```    
@@ -255,7 +260,7 @@ JS
 ```
 
 Oh,原来是这个exif在搞鬼，懂了懂了。等等，exif是个什么鬼，于是万能的Google告诉了我答案：[exif][8]（照顾国情，我把链接换成了百度百科的）。总的来说，exif就是一种图片格式，但是它比普通的图片格式多了很多参数，eg.光圈 快门 白平衡，还有就是照片的方向，所以腾讯的大大们就获取了这个参数并将他给了照片，照片就可以像从照片库里选出来的一样，可以正常翻转啦。
-### 意外发现
+#### 意外发现
 在读他们的代码时，我发现一个FileReader()和readAsDataURL()，原谅我浅薄，虽然眼熟，但是不知道怎么用，于是还是查查查：[FileReader.readAsDataURL()][9]（今天才发现[MDN][10]真是好东西，以后一定要多逛逛，把它用起来）页面里面有个demo
 
 HTML
