--- a/_posts/2015-12-16-welcome.markdown
+++ b/_posts/2015-12-16-welcome.markdown
@@ -62,7 +62,9 @@ tags:
 
 * 配置文件问题。要搞懂\_config.yml里面各个变量的**实际意义**。eg.featured-condition-size这个变量默认配置为1，也就是说起码要有两篇文章是某一个标签，这个标签才会显示在FEATURED TAGS处，我自己就因为这个原因浪费了好多时间。
 
+后续添加问题：
 
+* 要在yml配置文件里添加 `future:true`,否则不能发布超过当天的博文（貌似还有时差，美国时间为准）
 
 当你把Jekyll安装完，本地修改调试完，就可以将文件夹commit到你的username.github.io仓库的master下啦。大概过10分钟，你就可以在**username.github.io**（默认）这个网址下中二地看着自己的博客(孩)页面(子)了。
 
